# microservices-ocr

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/routes/: api.py
app/services/: easyocr_service.py  job_queue.py  ocr_orchestrator.py  ocrmypdf_service.py  pdf_builder.py  storage_service.py  tesseract_service.py
app/static/: style.css
app/templates/: index.html
app/utils/: image_preprocessing.py  quality_evaluator.py
tests/: test_api.py
